--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-tools": "^0.13.3",
     "redux": "^3.4.0",
     "redux-devtools": "^3.2.0",
+    "redux-saga": "^0.13.0",
     "redux-thunk": "^2.0.1",
     "serve-favicon": "^2.3.0",
     "url-loader": "^0.5.7",
