--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js",
     "start": "cross-env NODE_ENV=development node run.js",
-    "production": "cross-env NODE_ENV=production node run.js"
+    "production": "cross-env NODE_ENV=production node run.js",
+    "test": "babel-node src/client/sagas.spec.js | tap-spec"
   },
   "author": "",
   "license": "ISC",
@@ -63,6 +64,7 @@
     "redux-saga": "^0.13.0",
     "redux-thunk": "^2.0.1",
     "serve-favicon": "^2.3.0",
+    "tape": "^4.6.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
   }
