--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "react"],
+  "presets": ["es2015", "react", "stage-2"],
   "sourceMaps": true,
   "env": {
     "development": {
@@ -15,8 +15,9 @@
               "imports": ["react", "redbox-react"]
             }
           ]
-        }]
-      ]
+        }],
+        ["transform-runtime"]
+      ],
     },
     "production": {
       "plugins": []
