--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "babel": "^6.5.2",
     "babel-core": "^6.7.6",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "~6.9.1",
     "babel-plugin-react-transform": "^2.0.2",
-    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "babel-cli": "^6.7.5",
+    "babel-runtime": "^6.18.0",
     "body-parser": "^1.15.0",
     "config": "^1.20.1",
     "cookie-parser": "^1.4.1",
@@ -58,6 +59,7 @@
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.2",
+    "react-tap-event-plugin": "^2.0.1",
     "react-tools": "^0.13.3",
     "redux": "^3.4.0",
     "redux-devtools": "^3.2.0",
