--- a/package.json
+++ b/package.json
@@ -42,13 +42,14 @@
   },
   "dependencies": {
     "babel-cli": "^6.7.5",
-    "babel-runtime": "^6.18.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
     "babel-register": "^6.7.2",
+    "babel-runtime": "^6.18.0",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.0",
     "config": "^1.20.1",
     "cookie-parser": "^1.4.1",
