--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "file-loader": "^0.8.5",
     "html-webpack-plugin": "^2.15.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
     "react": "^15.0.1",
