--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux-saga": "^0.13.0",
     "redux-thunk": "^2.0.1",
     "serve-favicon": "^2.3.0",
+    "skeleton-css": "^2.0.4",
     "tape": "^4.6.2",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0"
