--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "babel-cli": "^6.7.5",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.6.0",
@@ -55,6 +56,7 @@
     "cookie-parser": "^1.4.1",
     "cross-env": "^1.0.7",
     "es6-promise": "^3.1.2",
+    "eslint-plugin-babel": "^4.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
