--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "config": "^1.20.1",
     "cookie-parser": "^1.4.1",
     "cross-env": "^1.0.7",
-    "es6-promise": "^3.1.2",
+    "es6-promise": "^3.3.1",
     "eslint-plugin-babel": "^4.0.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
@@ -79,6 +79,7 @@
     "skeleton-css": "^2.0.4",
     "tape": "^4.6.2",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+    "whatwg-fetch": "^2.0.1"
   }
 }
