--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "html-webpack-plugin": "^2.15.0",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^7.1.9",
+    "localStorage": "^1.0.3",
     "mongoose": "^4.4.12",
     "morgan": "^1.7.0",
     "react": "^15.0.1",
