--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-dom": "^15.0.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.2",
+    "react-router-redux": "^4.0.7",
     "react-tap-event-plugin": "^2.0.1",
     "react-tools": "^0.13.3",
     "redux": "^3.4.0",
